05SignUpForm/style.css
/* css Reset */
*, *::before, *::after {
    box-sizing: border-box;
  }
*{
    margin: 0;
    padding: 0;
    
}
body{
    /* add line height */
line-height: 1.5;
/* have no idea  */
-webkit-font-smoothing: antialiased;
}
img {
    display: block;
    max-width: 100%;
}
input, button, textarea, select {
    font: inherit;
}
/* text overflow stop */
p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
/* line wrapping improve  */
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }

/* adding custom properties */
*{
   
   --background-color-container:#EEEEEE;
   --mobile-font-size:1.1rem;
   --mobile-paddding:1rem;
   --mobile-margin:1rem;
   --input-border:#e3e7e9;
   --main-color:#aa9d8d;
   --invalid-color:red;
   --invalid-background:rgba(255, 0, 0, 0.843)a(255, 0, 0, 0.825);
   --valid-color:#1ee000;
   --box-shadow: #96969694;
}
/* Mobile Layout design */
body{
    

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: #fff;

    
    min-height: 100vh;

}
.container{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: flex-start;
   

  
    background-color: #EEEEEE;
    border-radius: 10px;
    width: 100%;
    height: 100%;
    padding:calc(var(--mobile-paddding)*2) var(--mobile-paddding);
    box-shadow: 20px 20px 30px 10px #00000055;

}
.main-header,.input-container1,.input-container2,.input-container3{
  margin-bottom: var(--mobile-margin);
}
.side{
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  text-align: center;

  width: 100%;
  margin-bottom: var(--mobile-margin);

  

  .logo-title{
    font-size: 4rem;
  }
  .logo-image{
  

    
    width: 45px;
    height: 45px;
  }
}
.main-header{
  display: flex;
  flex-direction: column;
  align-items: center;

  h2{
    text-align: center;
    font-size: calc(var(--mobile-font-size)*1.4);
  }
  .header-details{
    display: none;
  }
}
.main-form{
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
  ul{
    width: 100%;
    padding: 10px;
  }
  ul li{
    list-style-type: none;
    display: flex;
    flex-direction: column;
    width: 100%;
    .input-container1,.input-container2{
      display: flex;
      flex-direction: column;
      width: 100%;
    }
    input,button{
      border: none;
      border-radius: 10px;
      
      font-size: 1.3rem;
      padding: 5px 15px;
  }
  button{
    color: #fff;
    background-color: var(--main-color);
    cursor:pointer;

    width: 100%;

  }
  
  .button-container+p{
    margin: 12px 0;
    a{
      text-decoration: none;
      font-weight: bold;
      color: var(--main-color);
    }
  }
}
}
input{
  outline: 2px solid #aeaeae99;
  box-shadow: 1px 1px 1px var(--box-shadow);
}
input:user-invalid{
  outline: 2px solid red;
}
input:user-valid,input:focus:valid{
  outline: 2px solid var(--valid-color);
}




/* DeskTop Styles */

@media only screen and (min-width: 1200px) {

  body{
    
    background-image: url(images/background.jpg);
    background-repeat: no-repeat;
    background-size: cover;  
  }
  .container{
    width:clamp(600px,80vw,2200px);
    height: clamp(215px,830px,90vh);
    flex-direction: row;
    justify-content: space-between;
    padding: 0;
    overflow: hidden;

    .main{
      display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    gap: 10px;
    width: 80%;
    height:100%;

    }
    .side{
      flex-direction: column;
      justify-content: space-around;
      width: clamp(160px,465px,40%);
      align-self: flex-end;
      background-image: url(images/side-image.jpg);
      background-repeat: no-repeat;
      background-size: cover;
      height:100%;
      margin: 0;

      .logo-title{
        color:#fff;
      }
      .logo-image{
        width: 60%;
        height: auto;
        opacity: 0.5;
        margin-top: -50px;
      }

    }
  }
  .main-header{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 2rem;
    height: 20%;
    width: 100%;
    h2{
    
      /* text-align: left; */
      font-size: calc(var(--mobile-font-size)*1.4);
      font-size: 2.5rem;
      
    }
    .header-details{
      display: block;
      
    }
  }
  .main-form{
    justify-content: center;
    height: 60%;
    padding-top:2rem ;
    padding-bottom: 2rem;
    
    ul{
      width: auto;
    }
    ul li{
      flex-direction: row;
      justify-content: space-evenly;
      gap: 30px;
      .input-container3{
        display: flex;
        gap: 10px;
        margin-bottom: 10px;
        input{
          outline:none;
          accent-color: #5f4e46;
          
        }
      }   
      .input-container1,.input-container2{
        label{
          color: #545454;
          margin-left: 2px;
          
        }
        input{

          padding:2px 5px;
          font-size: 1rem;
          border-radius: 6px;
          box-shadow: 0px 0px 5px 2px #0000003e;
        }
      }
    }
    ul .form-list4{
      flex-direction: column;
      gap: 5px;
      .input-container3{
        margin: 0;
      }
      .button-container{
        width: 50%;
         button{
          font-size: 1rem;
          padding: 2px ;
          border-radius: 6px;
          box-shadow: 0px 0px 2px 1px #00000054;
       }
     }
    }
  }
}

